--- a/index.html
+++ b/index.html
@@ -21,13 +21,74 @@
                 noluisse,enim
             </p>
             <img src="donate-today-main/images/donation9 (2).png" alt="">
-            <a class="link-button" target=_blank
+            <a class="link-button" target="_blank"
                 href="file:///C:/Users/cc/Desktop/project/my-web-develop/index.html">Donate Now</a>
 
     </div>
 
 </section>
+<section class="Donate today">
+    <div>
+        <h1>Donate today</h1>
+        <p>lorem ipsum dolor sit amet,usu cu possit referrentur,at eam fali deterruisset.no due populo animal
+            noluisse,enim</p>
+        <table width="100%" cellpadding="0" callspacing="0">
+            <tr>
+                <td width="200">200tk</td>
+                <td>&nbsp;</td>
+                <td width="200">300tk</td>
+                <td>&nbsp;</td>
+                <td width="200">500tk</td>
+                <td>&nbsp;</td>
+                <td width="200">5000tk</td>
+                <td>&nbsp;</td>
+            </tr>
+
+        </table>
+
+
+        <footer>other amount(Taka)</footer>
+
+        <a class="link-button" target="_blank" href="">Donate Now</a>
+
+</section>
+
+</div>
+<section class="Our Donate Plane">
+    <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli
+        deterruisset. No duo populo animal noluisse, enim</p>
+</section>
+
+<section>
+    <div>
+        <i class="shelter.png"></i>
+        <h1>Fod for family</h1>
+        <p>Amet minim mollit non deserunt
+            ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim
+            velit mollit.</p>
+    </div>
+    <div>
+
+        <h1>Shelter for family</h1>
+        <p>Amet minim mollit non deserunt
+            ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim
+            velit mollit.</p>
+    </div>
+    <div>
+        <h1>Education for child</h1>
+        <p>Amet minim mollit non deserunt
+            ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim
+            velit mollit.</p>
+    </div>
+</section>
+
+
 
 </body>
+<footer>Be Humble</footer>
+<p>I am gonna do it</p>
 
 </html>
